<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="113dp"
        android:layout_alignParentStart="true"
        app:srcCompat="@drawable/topbun" />

    <RadioGroup
        android:id="@+id/rg1"
        android:layout_width="140dp"
        android:layout_height="111dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:checkedButton="@+id/radioButtonBeef">

        <RadioButton
            android:id="@+id/radioButtonBeef"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/beef" />

        <RadioButton
            android:id="@+id/radioButtonLamb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lamb" />

        <RadioButton
            android:id="@+id/radioButtonOstrich"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ostrich" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBoxProsciutto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="243dp"
        android:text="@string/prosciutto" />

    <RadioGroup
        android:id="@+id/rg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBoxProsciutto"
        android:layout_centerHorizontal="true"
        android:checkedButton="@+id/radioButton4"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/asiago" />

        <RadioButton
            android:id="@+id/radioButtonProvolone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Provolone" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="241dp"
        android:layout_height="31dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="211dp"
        android:text="@string/sauce" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="-211dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="75dp"
        app:srcCompat="@drawable/bottombun" />

    <TextView
        android:id="@+id/textViewCalorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-75dp"
        android:text="@string/calorie"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

</RelativeLayout>